[workspace]
members = ["packages/*", "examples/*"]

[package]
name = "xframe"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
extra = ["extra-elements", "extra-attributes", "extra-events"]
extra-elements = ["xframe-extra/elements"]
extra-attributes = ["xframe-extra/attributes"]
extra-events = ["xframe-extra/events"]

[dependencies.xframe-core]
path = "packages/core"

[dependencies.xframe-extra]
path = "packages/extra"
optional = true
default-features = false

[dependencies.xframe-reactive]
path = "packages/reactive"

[dependencies.xframe-web]
path = "packages/web"

[profile.release]
lto = true
opt-level = "z"
